Changes to BC and behaviour in version 4.2.0
============================================

INI setting changes
-------------------

image.ini
  [AnimatedGIF]
  DisallowedFilters[] defaults to empty
  AllowedFilters[] defaults to geometry/*
  This change is to ensure that animated GIFs can be resized using default settings.
  Also implemented in 4.1.4 and 4.0.7.


Change of behaviour
-------------------

- eZLDAPUser::loginUser

  ldap.ini setting LDAPFollowReferrals is introduced and set to 0 by default as
  ldap code did not work with most AD setups. LDAP_OPT_REFERRALS was earlier not
  set at all, thus enabled.

- User / Forgotpassword

  Links in the mail generated by the user/forgotpasswordmail.tpl template will
  no longer have the hostname prepended to them. This must be handled in the
  template. The change was done in order to be consistent with other emails sent
  by eZ Publish.


Renamed methods
---------------

- eZSoapRequest::namespace() -> eZSoapRequest::ns()

  Renamed for php 5.3 support, see issue #13825.

eZURLWildcard changes
---------------------

Cache files format change
'''''''''''''''''''''''''

The wildcard cache files (var/xxx/cache/wildcard/wildcard_<md5>_xxx.php) used to
contain callback functions. They now contain PHP arrays like most other caches.
Naming remains completely the same.

API consolidation
'''''''''''''''''
All classes of eZURLWildcard now have a proper visibility. Lots of them have
been made protected.

Public methods: eZURLWildcard, definition, asArray, store, removeAll, removeByIDs,
fetch, fetchBySourceURL, fetchList, fetchListCount, translate, expireCache,
fetchCacheFile (callback for the cluster handler).

Signatures for the public methods haven't changed.

HTTP behaviour changes
----------------------
An HTTP 1.1 500 error will be thrown when a fatal error occurs.

Removed features
----------------
The deprecated form module has been removed.